# SMH2G-MemBlock-Tool

./: .clang-format  CMakeLists.txt  readme.md
arduino/: EEPROM.h  SimpleBuffer.h  Test.h  arduino.ino  protocol.h
pc/: CMakeLists.txt  ErrorMessage.cpp  ErrorMessage.h  logic.cpp  logic.h  main.cpp
pc/ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ui.qrc
